--- a/test/application.yml
+++ b/test/application.yml
@@ -1,4 +1,4 @@
 user:
-  userName: test/gggshit!!!!!!!!!!!!!!!
+  userName: testtesttesttesttesttesttest/gggshit!!!!!!!!!!!!!!!
   sex: 男
   age: 18
