--- a/test/application.yml
+++ b/test/application.yml
@@ -1,4 +1,4 @@
 user:
-  userName: testtesttesttesttesttesttest/gggshit!!!!!!!!!!!!!!!
+  userName: test26+2626+26+26+26+26+26+!!!!!!!!!!!!
   sex: 男
   age: 18
